--- a/index.html
+++ b/index.html
@@ -30,18 +30,20 @@
 			</div>
 			<a href="#" class="header__button"><span>read more</span></a>
 			<div class="header__arrow">
+				<a href="#About">
 				<img src="img/icon/arrow-down.png" alt="arrow down">
+				</a>
 			</div>
 		</div>
 		<div class="about">
 			<nav class="about__menu">
 				<a href="#" class="about__menu__home">home</a>
-				<a href="#" class="about__menu__about-us">about us</a>
-				<a href="#" class="about__menu__portfolio">portfolio</a>
-				<a href="#" class="about__menu__contact">contact</a>
+				<a href="#About" class="about__menu__about-us">about us</a>
+				<a href="#Portfolio" class="about__menu__portfolio">portfolio</a>
+				<a href="#Contact" class="about__menu__contact">contact</a>
 			</nav>
 			<div class="about__title">
-				<p class="about__title__h1">about</p>
+				<p class="about__title__h1"><a name="About"></a>about</p>
 			</div>
 			<div class="about__line">
 				<div></div>
@@ -95,7 +97,7 @@
 		</div>
 		<div class="portfolio">
 			<div class="portfolio__title">
-				<h2>portfolio</h2>
+				<h2><a name="Portfolio"></a>portfolio</h2>
 			</div>
 			<div class="portfolio__line">
 				<div></div>
@@ -141,16 +143,67 @@
 				</a>
 			</div>
 		</div>
-		<div class="contact"></div>
+		<div class="contact">
+			<div class="contact__content">
+				<div class="contact__title">
+					<h2><a name="Contact"</a>contact</h2>
+				</div>
+				<div class="contact__line"></div>
+				<div class="contact__content2">
+					<div class="contact__content2__boxes">
+						<div class="contact__boxes__box1">
+							<div class="contact__box1__your-name">
+								<p>your name</p>
+								<input tabindex="1" type="text">
+							</div>
+							<div class="contact__box1__your-e-mail">
+								<p>your e-mail</p>
+								<input tabindex="2" type="text">
+							</div>
+							<div class="contact__box1__message">
+								<p>message</p>
+								<textarea tabindex="3"></textarea>
+							</div>
+						</div>
+						<div class="contact__boxes__box2">
+							<div class="contact__box2__title">
+								<p>Have an idea for a project? Just looking to </p>
+								<p>explore and see the possibilities?</p>
+								<p>I'm here to help.</p>
+							</div>
+							<div class="contact__box2__name">
+								<p>Postma Elena</p>
+							</div>
+							<div class="contact__box2__icons">
+								<div class="contact__box2__f">
+									<a href="https://facebook.com/">
+										<img src="img/icon/f.png" alt="facebook">
+									</a>
+								</div>
+								<div class="contact__box2__in">
+									<a href="https://www.instagram.com/">
+										<img src="img/icon/in.png" alt="">
+									</a>
+								</div>
+								<div class="cintact__bx2__mail">
+									<p>e-mail: <span>postma.elena@gmail.com</span></p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<button tabindex="4" class="send" type="submit">send</button>
+			</div>
+		</div>
 		<div class="footer">
 			<div class="footer__logo">
 				<img src="img/logo/footer-logo.png" alt="binary small logo">
 			</div>
 			<div class="footer__links">
 					<a class="footer__links__home" href="#">Home</a>
-					<a class="footer__links__facebook" href="#">Facebook</a>
-					<a class="footer__links__linkedin" href="#">Linkedin</a>
-					<a footer__links__contact href="#">Contact</a>
+					<a class="footer__links__facebook" href="https://facebook.com/">Facebook</a>
+					<a class="footer__links__linkedin" href="https://www.linkedin.com/">Linkedin</a>
+					<a footer__links__contact href="#Contact">Contact</a>
 			</div>
 			<div class="footer_copyright">
 				<p>© 2015. All Rights Reserved</p>
