--- a/index.html
+++ b/index.html
@@ -129,18 +129,22 @@
 				<h2>Our partners</h2>
 			</div>
 			<div class="our-patners__links">
-				<a href="#" class="our-patners__link__w">
-					<img src="../2020-05-10/img/icon/our-parthers/logo1.png" alt="">
-				</a>
-				<a href="#" class="our-patners__link__archiq">
-					<img src="img/icon/our-parthers/logo2.png" alt="">
-				</a>
-				<a href="#" class="our-patners__link__thomsoon">
-					<img src="img/icon/our-parthers/logo3.png" alt="">
-				</a>
-				<a href="#" class="our-patners__link__alex">
-					<img src="img/icon/our-parthers/logo4.png" alt="">
-				</a>
+				<div class="our-partners__box1">
+					<a href="#" class="our-patners__link__w">
+						<img src="../2020-05-10/img/icon/our-parthers/logo1.png" alt="">
+					</a>
+					<a href="#" class="our-patners__link__archiq">
+						<img src="img/icon/our-parthers/logo2.png" alt="">
+					</a>
+				</div>
+				<div class="our-partners__box2">
+					<a href="#" class="our-patners__link__thomsoon">
+						<img src="img/icon/our-parthers/logo3.png" alt="">
+					</a>
+					<a href="#" class="our-patners__link__alex">
+						<img src="img/icon/our-parthers/logo4.png" alt="">
+					</a>
+				</div>
 			</div>
 		</div>
 		<div class="contact">
