--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			<div class="our-patners__links">
 				<div class="our-partners__box1">
 					<a href="#" class="our-patners__link__w">
-						<img src="../2020-05-10/img/icon/our-parthers/logo1.png" alt="">
+						<img src="img/icon/our-parthers/logo1.png" alt="">
 					</a>
 					<a href="#" class="our-patners__link__archiq">
 						<img src="img/icon/our-parthers/logo2.png" alt="">
