--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</div>
 			<a href="#" class="header__button"><span>read more</span></a>
 			<div class="header__arrow">
-				<a href="#Aabout__menu">
+				<a href="#about__menu">
 				<img src="img/icon/arrow-down.png" alt="arrow down">
 				</a>
 			</div>
