--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 			</div>
 			<a href="#" class="header__button"><span>read more</span></a>
 			<div class="header__arrow">
-				<a href="#About">
+				<a href="#about__menu">
 				<img src="img/icon/arrow-down.png" alt="arrow down">
 				</a>
 			</div>
 		</div>
 		<div class="about">
-			<nav class="about__menu">
+			<nav class="about__menu"><a name="about__menu"></a>
 				<a href="#" class="about__menu__home">home</a>
 				<a href="#About" class="about__menu__about-us">about us</a>
 				<a href="#Portfolio" class="about__menu__portfolio">portfolio</a>
