--- a/index.html
+++ b/index.html
@@ -30,18 +30,20 @@
 			</div>
 			<a href="#" class="header__button"><span>read more</span></a>
 			<div class="header__arrow">
-				<a href="#about__menu">
+				<a href="#about__wrap">
 				<img src="img/icon/arrow-down.png" alt="arrow down">
 				</a>
 			</div>
 		</div>
 		<div class="about">
-			<nav class="about__menu"><a name="about__menu"></a>
-				<a href="#" class="about__menu__home">home</a>
-				<a href="#About" class="about__menu__about-us">about us</a>
-				<a href="#Portfolio" class="about__menu__portfolio">portfolio</a>
-				<a href="#Contact" class="about__menu__contact">contact</a>
-			</nav>
+            <div class="about__wrap"><a name="about__wrap"></a>
+                <nav class="about__menu">
+                    <a href="#" class="about__menu__home">home</a>
+                    <a href="#About" class="about__menu__about-us">about us</a>
+                    <a href="#Portfolio" class="about__menu__portfolio">portfolio</a>
+                    <a href="#Contact" class="about__menu__contact">contact</a>
+                </nav>
+            </div>
 			<div class="about__title">
 				<p class="about__title__h1"><a name="About"></a>about</p>
 			</div>
